# Chatbot_tele

./: .gitignore  .replit  README.md  app.py  check_gemini_models.py  data_loader.py  gemini_test.py  main.py  pyproject.toml  replit.md  schema.sql
attached_assets/: __init___1758042048021.py  app_1758042025763.py  data_loader_1758042048022.py  diagnosis_engine_1758042048025.py  medication_recommender_1758042048026.py  ml_diagnosis_1758042048027.py  patient_tracker_1758042048028.py  prescription_scanner_1758042048030.py  symptom_severity_1758042048031.py
backend/: app.py
backend/utils/: chatbot_responses.py  health_checker.py
services/: language_service.py  prescription_ocr.py  reminder_service.py  twilio_service.py
utils/: __init__.py  database.py  diagnosis_engine.py  medication_recommender.py  ml_diagnosis.py  patient_tracker.py  prescription_scanner.py  symptom_severity.py
